force-app/main/default/objects/Account/fields/Vendor_Point_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Point_of_Sale__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Point of Sale System (POS) used by the client. You will only be able to select from the Vendors list (not accounts or contacts). If the Vendor you are looking for is missing, please add it to the list.</description>
    <inlineHelpText>Point of Sale System (POS) used by the client. You will only be able to select from the Vendors list (not accounts or contacts). If the Vendor you are looking for is missing, please add it to the list.</inlineHelpText>
    <label>Vendor - Point of Sale</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Accounts (Vendor - Point of Sale)</relationshipLabel>
    <relationshipName>Accounts6</relationshipName>
    <type>Lookup</type>
</CustomField>