force-app/main/default/objects/Account/fields/Vendor_Previous_Auditor__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Previous_Auditor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Previous Auditor (or current auditor if not Richey May) used by the client. You will only be able to select from the Vendors list (not accounts or contacts). If the Vendor you are looking for is missing, please add it to the list.</description>
    <inlineHelpText>Previous Auditor (or current auditor if not Richey May) used by the client. You will only be able to select from the Vendors list (not accounts or contacts). If the Vendor you are looking for is missing, please add it to the list.</inlineHelpText>
    <label>Vendor - Previous Auditor</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Accounts (Vendor - Previous Auditor)</relationshipLabel>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>