force-app/main/default/objects/Account/fields/Vendor_Previous_Tax_Provider__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Previous_Tax_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Previous Tax Provider (or current tax provider if not Richey May) used by the client. You will only be able to select from the Vendors list (not accounts or contacts). If the Vendor you are looking for is missing, please add it to the list.</description>
    <inlineHelpText>Previous Tax Provider (or current tax provider if not Richey May) used by the client. You will only be able to select from the Vendors list (not accounts or contacts). If the Vendor you are looking for is missing, please add it to the list.</inlineHelpText>
    <label>Vendor - Previous Tax Provider</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Accounts (Vendor - Previous Tax Provider)</relationshipLabel>
    <relationshipName>Accounts9</relationshipName>
    <type>Lookup</type>
</CustomField>