force-app/main/default/objects/Account/fields/Vendor_Previous_TPN__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Previous_TPN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the company they use for their TPN assessment or used prior to Richey May if a current TPN client.</description>
    <inlineHelpText>This is the company they use for their TPN assessment or used prior to Richey May if a current TPN client.</inlineHelpText>
    <label>Vendor - Previous TPN</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Accounts (Vendor - Previous TPN)</relationshipLabel>
    <relationshipName>AccountsMobs</relationshipName>
    <type>Lookup</type>
</CustomField>