force-app/main/default/objects/Account/fields/Vendor_Ransomware__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Ransomware__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the company they use for Ransomware Services or used prior to Richey May if a current TPN client.</description>
    <inlineHelpText>This is the company they use for Ransomware Services or used prior to Richey May if a current TPN client.</inlineHelpText>
    <label>Vendor - Ransomware</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Accounts (Vendor - Ransomware)</relationshipLabel>
    <relationshipName>AccountsModP</relationshipName>
    <type>Lookup</type>
</CustomField>