force-app/main/default/objects/Account/fields/Vendor_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Reporting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Business Intelligence/Reporting system used by the client. You will only be able to select from the Vendors list (not accounts or contacts). If the Vendor you are looking for is missing, please add it to the list.</description>
    <inlineHelpText>Business Intelligence/Reporting system used by the client. You will only be able to select from the Vendors list (not accounts or contacts). If the Vendor you are looking for is missing, please add it to the list.</inlineHelpText>
    <label>Vendor - BI/Reporting</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Accounts (Vendor - BI/Reporting)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>