force-app/main/default/objects/Account/fields/Vendor_SubServicer__c.field-meta.xml
<CustomField>
    <fullName>Vendor_SubServicer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Subservicing Provider used by the client. You will only be able to select from the Vendors list (not accounts or contacts). If the Vendor you are looking for is missing, please add it to the list.</description>
    <inlineHelpText>Subservicing Provider used by the client. You will only be able to select from the Vendors list (not accounts or contacts). If the Vendor you are looking for is missing, please add it to the list.</inlineHelpText>
    <label>Vendor - SubServicer</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Accounts (Vendor - SubServicer)</relationshipLabel>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>