force-app/main/default/objects/Account/fields/Vendor_vCISO__c.field-meta.xml
<CustomField>
    <fullName>Vendor_vCISO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the company they use for vCISO Services or used prior to Richey May if a current TPN client.</description>
    <inlineHelpText>This is the company they use for vCISO Services or used prior to Richey May if a current TPN client.</inlineHelpText>
    <label>Vendor - vCISO</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Accounts (Vendor - vCISO)</relationshipLabel>
    <relationshipName>AccountsModF</relationshipName>
    <type>Lookup</type>
</CustomField>