force-app/main/default/objects/Account/fields/X2021_HMDA_Loan_Volume__c.field-meta.xml
<CustomField>
    <fullName>X2021_HMDA_Loan_Volume__c</fullName>
    <description>2021 HMDA Loan Volume from data pull</description>
    <inlineHelpText>2021 HMDA Loan Volume from data pull</inlineHelpText>
    <label>2021 HMDA Loan Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>