force-app/main/default/objects/Account/fields/X2021_Origination_Volume__c.field-meta.xml
<CustomField>
    <fullName>X2021_Origination_Volume__c</fullName>
    <description>2021 Mortgage Origination Volume</description>
    <inlineHelpText>2021 Mortgage Origination Volume</inlineHelpText>
    <label>2021 Origination Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>