force-app/main/default/objects/Account/fields/Xero_Id__c.field-meta.xml
<CustomField>
    <fullName>Xero_Id__c</fullName>
    <description>Xero system ID for admin use only</description>
    <label>Xero Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>