force-app/main/default/objects/Account/recordTypes/AI_Account.recordType-meta.xml
<RecordType>
    <fullName>AI_Account</fullName>
    <active>true</active>
    <description>Accounts in the Alternative Investments Industry. You will see AI custom fields.</description>
    <label>AI Account</label>
</RecordType>