force-app/main/default/objects/Account/recordTypes/AI_Service_Provider.recordType-meta.xml
<RecordType>
    <fullName>AI_Service_Provider</fullName>
    <active>true</active>
    <description>AI Service providers are vendors that work with our clients. We may market to them as well.</description>
    <label>AI Service Provider</label>
</RecordType>