force-app/main/default/objects/Account/recordTypes/M_E_Account.recordType-meta.xml
<RecordType>
    <fullName>M_E_Account</fullName>
    <active>true</active>
    <description>Media and Entertainment accounts</description>
    <label>M&amp;E Account</label>
</RecordType>