force-app/main/default/objects/Account/recordTypes/Master_Account.recordType-meta.xml
<RecordType>
    <fullName>Master_Account</fullName>
    <active>true</active>
    <description>Master accounts are standard accounts - they represent clients we do business with</description>
    <label>Master Account</label>
</RecordType>