force-app/main/default/objects/Account/recordTypes/Mortgage_Bank_or_Credit_Union_Account.recordType-meta.xml
<RecordType>
    <fullName>Mortgage_Bank_or_Credit_Union_Account</fullName>
    <active>true</active>
    <description>Independent Mortgage Banks, Banks or Credit Unions should use this type of account.</description>
    <label>Mortgage, Bank or Credit Union Account</label>
</RecordType>