force-app/main/default/objects/Account/recordTypes/Mortgage_Service_Provider.recordType-meta.xml
<RecordType>
    <fullName>Mortgage_Service_Provider</fullName>
    <active>true</active>
    <description>These are referral sources we want to communicate with, but are not actual mortgage companies/banks/CUs. Enter Subservicers, technology providers, etc. as VENDORS.</description>
    <label>Mortgage Service Provider</label>
</RecordType>