force-app/main/default/objects/Account/recordTypes/Other_Account.recordType-meta.xml
<RecordType>
    <fullName>Other_Account</fullName>
    <active>true</active>
    <description>Companies that fall outside of Mtg/Bank/CU, AI, M&amp;E or Service Provider.</description>
    <label>Other Account</label>
</RecordType>