force-app/main/default/objects/Account/listViews/Accounts_No_Activity_Last_30_Days.listView-meta.xml
<ListView>
    <fullName>Accounts_No_Activity_Last_30_Days</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.LAST_ACTIVITY</field>
        <operation>lessOrEqual</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Accounts - No Activity Last 30 Days</label>
</ListView>