force-app/main/default/objects/Account/listViews/AI_Service_Providers_CO.listView-meta.xml
<ListView>
    <fullName>AI_Service_Providers_CO</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Account_Client_Status__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Email_Domain__c</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>Segment__c</columns>
    <columns>SubSegment__c</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.AI_Service_Provider</value>
    </filters>
    <filters>
        <field>ACCOUNT.ADDRESS1_STATE</field>
        <operation>equals</operation>
        <value>CO</value>
    </filters>
    <label>AI Service Providers - CO</label>
    <sharedTo>
        <group>Alternative_Investments</group>
    </sharedTo>
</ListView>