force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Account_Client_Status__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Email_Domain__c</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>Segment__c</columns>
    <columns>SubSegment__c</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Segment__c</field>
        <operation>equals</operation>
        <value>Mortgage Bank</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Mortgage_Service_Provider</value>
    </filters>
    <label>All Accounts</label>
</ListView>