force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Account_Client_Status__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Email_Domain__c</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>SubSegment__c</columns>
    <columns>Segment__c</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <filterScope>Mine</filterScope>
    <label>My Accounts</label>
</ListView>